// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiDistributionTransaction set withdraw address 1`] = `
<litransaction-stub
  block="500"
  color="#F2B134"
  fees="[object Object]"
  memo="TESTING (Sent via Lunie)"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Update withdraw address
    
  </div>
   
  <div>
    To cosmos18ymm350peujvq2xy9ymyqj4v34ekvnk3wydrs3
  </div>
</litransaction-stub>
`;

exports[`LiDistributionTransaction transaction without fees 1`] = `
<litransaction-stub
  block="500"
  color="#F2B134"
  memo="TESTING (Sent via Lunie)"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Withdrawal
    
  </div>
   
  <div>
    
      From 
    <router-link-stub
      to="/validator/cosmosvaloper18ymm350peujvq2xy9ymyqj4v34ekvnk3tsekuz"
    >
      
        cosmosvaloper18ymm350peujvq2xy9ymyqj4v34ekvnk3tsekuz
      
    </router-link-stub>
  </div>
</litransaction-stub>
`;

exports[`LiDistributionTransaction withdraw delegation rewards 1`] = `
<litransaction-stub
  block="500"
  color="#F2B134"
  fees="[object Object]"
  memo="TESTING (Sent via Lunie)"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Withdrawal
    
  </div>
   
  <div>
    
      From 
    <router-link-stub
      to="/validator/cosmosvaloper18ymm350peujvq2xy9ymyqj4v34ekvnk3tsekuz"
    >
      
        cosmosvaloper18ymm350peujvq2xy9ymyqj4v34ekvnk3tsekuz
      
    </router-link-stub>
  </div>
</litransaction-stub>
`;

exports[`LiDistributionTransaction withdraw validator commission 1`] = `
<litransaction-stub
  block="500"
  color="#F2B134"
  fees="[object Object]"
  memo="TESTING (Sent via Lunie)"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Withdraw validator commission
    
  </div>
   
  <div>
    
      From
    <router-link-stub
      to="/validator/cosmos18ymm350peujvq2xy9ymyqj4v34ekvnk3wydrs3"
    >
      
        cosmos18ymm350peujvq2xy9ymyqj4v34ekvnk3wydrs3
      
    </router-link-stub>
  </div>
</litransaction-stub>
`;
